2004-05-31  Release Manager

	* GCC 3.3.4 Released.

2004-05-03  Michael Koch  <konqueror@gmx.de>

	Fixes PR libgcj/14695:
	* java/net/NetworkInterface.java
	(getByName): Return null when no interface was found.

2004-02-14  Release Manager

	* GCC 3.3.3 Released.

2003-10-24  Ulrich Weigand  <uweigand@de.ibm.com>

	* prims.cc (catch_segv): Unblock correct signal.
	(catch_fpe): Likewise.

2003-10-16  Release Manager

	* GCC 3.3.2 Released.

2003-09-09  Alan Modra  <amodra@bigpond.net.au>

	* configure: Regenerate.

2003-08-20  Andrew Haley  <aph@redhat.com>

	* prims.cc (unblock_signal): New function.
	(catch_segv): Use it.
	(catch_fpe): Likewise.

	* include/i386-signal.h (RESTORE): New.
	(INIT_SEGV): Set restorer.
	(INIT_FPE): Likewise.

2003-08-08  Kean Johnston  <jkj@sco.com>

	* java/io/natFilePosix.cc: HAVE_READDIR_R is broken on SCO. Undefine.
	  If MAXPATHLEN is not defined by the system, define it.
	* java/io/natFileDescriptorPosix.cc: Ditto.

2003-08-04  Release Manager

	* GCC 3.3.1 Released.

2003-08-04  Release Manager

	* GCC 3.3.1 Released.

2003-07-11  Michael Koch  <konqueror@gmx.de>

	* gnu/gcj/convert/natIconv.cc
	(iconv_init): Fixed possible memory leak by releasing allocated iconv
	handle.

2003-07-11  Jeff Sturm  <jsturm@one-point.com>

	PR libgcj/10886:
	* gnu/java/rmi/server/UnicastRemoteCall.java (returnValue):
	Test for empty vector.

2003-07-11 Jeff Sturm  <jsturm@one-point.com>

	PR libgcj/10838:
	* java/io/ObjectInputStream (enableResolveObject):
	Fixed spelling of permission name.

2003-07-11  Matt Kraai  <kraii@alumni.cmu.edu>

	* gnu/gcj/runtime/SharedLibLoader.java: Fix misspelling.
	* gnu/gcj/runtime/natSharedLibLoader.cc: Likewise.
	* java/awt/im/InputContext.java: Remove a redundant
	partial line.

2003-07-11  Jeff Sturm  <jsturm@one-point.com>

	* gnu/gcj/runtime/FirstThread.java (KinputASCII, KoutputASCII):
	Create dummy references for static linking.

2003-07-07  Adam Megacz <adam@xwt.org>

	* posix.cc: added #include<stdio.h>