@@ -1,3 +1,9 @@
+2004-06-22  Bryce McKinlay  <mckinlay@redhat.com>
+
+	Fix PR libgcj/12475
+	* gnu/gcj/runtime/StackTrace.java (finalize): Declare.
+	* gnu/gcj/runtime/natStackTrace.cc (finalize): New. Free "addrs".
+
 2004-05-31  Release Manager
 
 	* GCC 3.3.4 Released.
